--- a/day2prac.ipynb
+++ b/day2prac.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b915758f-f337-47cb-a954-5505f24af717",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,49 +618,647 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fa61ff7-3be4-43de-a611-db17f6722bba",
+   "cell_type": "markdown",
+   "id": "941f9fb3-9b04-4402-aaf8-46aa937335fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Loop statements\n",
+    "* while loop\n",
+    "* for loop\n",
+    "* nested loop\n",
+    "* loop control\n",
+    "    * break\n",
+    "    * continue\n",
+    "    * pass\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b2d4cea4-5992-494c-b938-f3ee0a26d001",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are now above 61 years old its time to retire\n"
+     ]
+    }
+   ],
+   "source": [
+    "## while loop\n",
+    "\n",
+    "age_worker = 25\n",
+    "\n",
+    "while age_worker <= 60:\n",
+    "    print(\"You are good to still be working Gov't jobs\")\n",
+    "    age_worker += 1\n",
+    "print(\"You are now {} years old its, time to retire!!!\".format(age_worker))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "96b08371-849b-441c-9127-fa5f8b0c4782",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are good to still be working Gov't jobs\n",
+      "You are now 61 years old its, time to retire!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "##\n",
+    "## while loop including else block\n",
+    "\n",
+    "age_worker = 25\n",
+    "\n",
+    "while age_worker <= 60:\n",
+    "    print(\"You are good to still be working Gov't jobs\")\n",
+    "    age_worker += 1\n",
+    "else:\n",
+    "    print(\"You are now {} years old its, time to retire!!!\".format(age_worker))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b93cc2d2-48c2-49f9-8749-d8ae16096daa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can still withdraw\n",
+      "current balance is 900000\n",
+      "You can still withdraw\n",
+      "current balance is 800000\n",
+      "You can still withdraw\n",
+      "current balance is 700000\n",
+      "You can still withdraw\n",
+      "current balance is 600000\n",
+      "You can still withdraw\n",
+      "current balance is 500000\n",
+      "You can still withdraw\n",
+      "current balance is 400000\n",
+      "You can still withdraw\n",
+      "current balance is 300000\n",
+      "You can still withdraw\n",
+      "current balance is 200000\n",
+      "You can still withdraw\n",
+      "current balance is 100000\n",
+      "You can still withdraw\n",
+      "current balance is 0\n",
+      "Balance low you can't make further withdrawal\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Example with Automated Teller Machine\n",
+    "## ATM with 1,000,000 Naira starting balance on monday morning\n",
+    "\n",
+    "start_bal = 1000000\n",
+    "\n",
+    "while start_bal > 5000:\n",
+    "    print(\"You can still withdraw\")\n",
+    "    start_bal -= 100000\n",
+    "    print(f\"current balance is {start_bal}\")\n",
+    "else:\n",
+    "    print(\"Balance low you can't make further withdrawal\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3f1c74b-61e1-4d40-9963-053580e283a3",
+   "metadata": {},
+   "source": [
+    "## While Loop"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f10aab2d-d131-4aeb-b5f7-b66f67a887cf",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "900\n",
+      "800\n",
+      "700\n",
+      "600\n",
+      "500\n",
+      "400\n",
+      "300\n",
+      "200\n",
+      "100\n",
+      "Reload the machine with more funds!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Atm machine with 1000 naira\n",
+    "\n",
+    "total_amount = 1000\n",
+    "while total_amount !=0:\n",
+    "    print(total_amount)\n",
+    "    total_amount=total_amount-100\n",
+    "else:\n",
+    "    print(\"Reload the machine with more funds!!\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43b9060c-6466-495c-b4d9-6608b1948bb0",
+   "metadata": {},
+   "source": [
+    "## For Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ebf4b25f-0786-4d93-9c94-ddd0e153c56a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lst = [\"Abioye\", 1, 2 , 3, 4, \"Apple\", \"banana\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fc4b11ca-bdb4-4d8e-a544-55e87df5ccab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7a8ff42d-f40a-43b6-8bad-e2345d741a74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5a6e2f58-9627-45e2-972e-2e8f72372974",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abioye\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Apple\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in lst:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "03b61533-a95e-44c8-8001-2763b1abb71a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Femi\n",
+      "Iyabo\n",
+      "Segun\n",
+      "Lara\n",
+      "Gbenga\n",
+      "Abioye\n",
+      "Abioye is the student taking the Data Science Master course with PWskills\n"
+     ]
+    }
+   ],
+   "source": [
+    "## second exercise\n",
+    "\n",
+    "name_students = [\"Femi\", \"Iyabo\", \"Segun\", \"Lara\", \"Gbenga\", \"Abioye\"]\n",
+    "\n",
+    "for name in name_students:\n",
+    "    print(name)\n",
+    "    if name == \"Abioye\":\n",
+    "        print(\"{} is the student taking the Data Science Master course with PWskills\".format(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4d845b57-e21e-4058-81c0-0f30a1e94c13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Femi\n",
+      "Iyabo\n",
+      "Segun\n",
+      "Lara\n",
+      "Gbenga\n",
+      "Abioye\n",
+      "Abioye is the student taking the Data Science Master course with PWskills"
+     ]
+    }
+   ],
+   "source": [
+    "## second exercise\n",
+    "\n",
+    "name_students = [\"Femi\", \"Iyabo\", \"Segun\", \"Lara\", \"Gbenga\", \"Abioye\"]\n",
+    "\n",
+    "for name in name_students:\n",
+    "    print(name)\n",
+    "    if name == \"Abioye\":\n",
+    "        print(f\"{name} is the student taking the Data Science Master course with PWskills\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d6e0401e-fc7e-48a4-aca9-fb9b4aa5936b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango"
+     ]
+    }
+   ],
+   "source": [
+    "## Modiification and exception\n",
+    "\n",
+    "fruit = \"mango\"\n",
+    "for x in fruit:\n",
+    "    print(x, end=\"\")  #iterate over the characters that makes up the word!!!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c17b9331-fdf2-4bd9-a844-b268d2f95ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03527f2b-265d-4dab-b532-a29c47039c8f",
+   "metadata": {},
+   "source": [
+    "## using Range function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b84bfca2-f686-4527-a051-d3d90170ccf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "094f53d6-907b-416d-8f45-b25d7d40d260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## the function takes 3 parameter(start, end, interval)\n",
+    "## Start is where the iteration begins\n",
+    "## end is the maximum number to reach which is excuted as -1, so for 6 the iteration will stop at 6-1=5. stops at 5\n",
+    "## if interval is excluded it defaults to 1\n",
+    "\n",
+    "for i in range(1,n):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "24521796-9057-4384-9689-fb54cc6f9fee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6, 2):  ## adding interval\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0521bc96-ce28-4cfd-9c65-8f887a3fda17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    * \n",
+      "   * * \n",
+      "  * * * \n",
+      " * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "### Nested Loops \n",
+    "\n",
+    "n=5\n",
+    "for i in range(0, n):   ##Note: the value of n (in this case 6) is registered already so,\n",
+    "    print(\" \"*(n-1), end=\"\")  ##\n",
+    "    n-=1 ## the reduction in \"n\" does not have impact on the existing n(6) for loop iteration\n",
+    "    for j in range(0, i+1): ## this cater for the printing of the stars\n",
+    "        print(\"* \", end=\"\")  ## this help print the instance of each loop on the same line\n",
+    "    print(\"\\r\") ### this takes us to new line below\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "2954e67c-4e41-4e91-9029-c5be7b02fb23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    * \n",
+      "   * * \n",
+      "  * * * \n",
+      " * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5 \n",
+    "for i in range(0, n): ## The n is registered for the loop already\n",
+    "    print(\" \"*(n-1), end=\"\")  ## prints the spaces and will accept more printed character on the same line\n",
+    "    print(\"* \"*(i+1))\n",
+    "    n-=1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a9a9f93-b976-4be3-be9c-6d490e9cada1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##loop controls\n",
+    "## Break and Continue\n",
+    "name_students = [\"Femi\", \"Iyabo\",  \"Abioye\", \"Segun\", \"Lara\", \"Gbenga\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7729f138-a93c-43b4-a002-46376279077b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This name: Femi was found too!!\n",
+      "This name: Iyabo was found too!!\n",
+      "Abioye was found in the list of names\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in name_students:\n",
+    "    if name == \"Abioye\":  ## it runs on untill this condition is true\n",
+    "        print(\"Abioye was found in the list of names\")\n",
+    "        break  ## it stops the loop here and close it!!!\n",
+    "        print(\"What is happening here!!\")\n",
+    "    print(f'This name: {name} was found too!!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8adbcef7-bc15-4366-b7dc-36b3c2f84f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This name: Femi was found too!!\n",
+      "This name: Iyabo was found too!!\n",
+      "Abioye was found in the list of names\n",
+      "What is happening here!!\n",
+      "This name: Abioye was found too!!\n",
+      "This name: Segun was found too!!\n",
+      "This name: Lara was found too!!\n",
+      "This name: Gbenga was found too!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## testing for pass\n",
+    "for name in name_students:\n",
+    "    if name == \"Abioye\":  ## it runs on untill this condition is true\n",
+    "        print(\"Abioye was found in the list of names\")\n",
+    "        pass  ## in continues the loop like nothing happened\n",
+    "        print(\"What is happening here!!\")\n",
+    "    print(f'This name: {name} was found too!!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d66bb6cb-8471-4750-9ffe-f7906fde2ae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This name: Femi was found too!!\n",
+      "This name: Iyabo was found too!!\n",
+      "Abioye was found in the list of names\n",
+      "This name: Segun was found too!!\n",
+      "This name: Lara was found too!!\n",
+      "This name: Gbenga was found too!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## testing for pass\n",
+    "for name in name_students:\n",
+    "    if name == \"Abioye\":  ## it runs on untill this condition is true\n",
+    "        print(\"Abioye was found in the list of names\")\n",
+    "        continue  ## stops the loop instance and start from the begining of the loop\n",
+    "        print(\"What is happening here!!\")\n",
+    "    print(f'This name: {name} was found too!!')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9a9f93-b976-4be3-be9c-6d490e9cada1",
+   "id": "4392c43e-173b-4ec1-8f96-bde2581eb153",
    "metadata": {},
    "outputs": [],
    "source": []
